--- a/css/base.css
+++ b/css/base.css
@@ -18,6 +18,9 @@ h4{
 h5{
   font-family: 'Special Elite', cursive;
 }
+p{
+  font-family: 'Special Elite', cursive;
+}
 .bangers{
   font-family: 'Bangers', cursive;
 }
