--- a/css/base.css
+++ b/css/base.css
@@ -23,7 +23,10 @@ p{
   font-family: 'Special Elite', cursive;
 }
 .anchor{
-  color:blue;
+  color:LightSteelBlue ;
+}
+.a{
+  color:LightSteelBlue ;
 }
 .bangers{
   font-family: 'Bangers', cursive;
