--- a/css/base.css
+++ b/css/base.css
@@ -52,7 +52,7 @@ p{
 .bangers{
   font-family: 'Bangers', cursive;
 }
-.special-elite{
+.font2{
   font-family: 'Special Elite', cursive;
 }
 .base-header-icon{
